--- a/resources/assets/sass/_mycss.scss
+++ b/resources/assets/sass/_mycss.scss
@@ -14,6 +14,7 @@ $height-masterads : 600px;
     & div.geodate-computer {
       position: absolute;
       bottom: 0;
+      right: 0;
     }
     & p.price span:not(.tag), & div[class*="geodate-"] {
       color: rgba(0,0,0,0.6);
